# Automake script for darwin.
#
# This is part of the darwin program.
#
# darwin. A simple genetic algorithm implementation with a self-adaptative
# strategy.
#
# Copyright (C) 2015 Marcos Díez García <marcos.diez.garcia@gmail.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.

ACLOCAL_AMFLAGS = -I m4 --install

###############################################################################
# Linker
###############################################################################
AM_LDFLAGS = -lrt -lm
###############################################################################
# Preprocessor
###############################################################################
AM_CPPFLAGS = $(DARWIN_FLAGS)
# Preprocessor symbol to be used by darwin's parsers to locate the configuration
# files.
#AM_CPPFLAGS = -DDATADIR=\"$(pkgdatadir)\"
###############################################################################
# Targets
###############################################################################
bin_PROGRAMS = test_parser_generic

test_parser_generic_SOURCES = \
	./src/base/report.h \
	./src/base/xmem.h \
	./src/base/xmem.c \
	./src/base/bits.h \
	./src/base/bits.c \
	./src/base/random.h \
	./src/base/random.c \
	./src/genome.h \
	./src/genome.c \
	./src/operators.h \
	./src/operators.c \
	./src/life.h \
	./src/life.c \
	./src/experiment/parse.h \
	./src/experiment/parse.c \
	./src/experiment/nqueens/queen.h \
	./src/experiment/nqueens/queen.c \
	./src/experiment/nqueens/nqueens.h \
	./src/experiment/nqueens/nqueens.c \
	./src/experiment/nqueens/parser_nqueens.c \
	./src/experiment/hampath/graph.h \
	./src/experiment/hampath/graph.c \
	./src/experiment/hampath/hampath.h \
	./src/experiment/hampath/hampath.c \
	./src/experiment/hampath/parser_hampath.h \
	./src/experiment/hampath/parser_hampath.c \
	./src/experiment/subsetsum/subsetsum.h \
	./src/experiment/subsetsum/subsetsum.c \
	./src/experiment/subsetsum/parser_subsetsum.h \
	./src/experiment/subsetsum/parser_subsetsum.c \
	./src/experiment/parser_evolution.h \
	./src/experiment/parser_evolution.c \
	./src/test_parser_generic.c
###############################################################################
# Darwin data files and scripts
###############################################################################
# Enable distribution and installation of darwin's data and script files.
pkgdata_DATA = ./data/*

install-data-hook:
	cd $(DESTDIR)$(pkgdatadir);\
	chmod u+x ./*.pl

# Enable cleaning of darwin's autogenerated configuration files.
CLEANFILES = ./data/*auto.config


EXTRA_DIST = m4/NOTES # autoreconf -i bug (v2.68)
